bases/managers/readarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  annotations:
    k3s.reynn.net/resource-profile: mid
spec:
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: k3s.io/hostname
                    operator: In
                    values:
                      - mimikyu
      containers:
        - name: readarr
          image: hotio/readarr:nightly
          resources: {}
          ports:
            - containerPort: 8787
              name: tcp-server
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /media/deadpool/downloads
            - name: books
              mountPath: /media/deadpool/books
      volumes:
        - name: downloads
          hostPath:
            path: /media/deadpool/downloads
            type: Directory
        - name: books
          hostPath:
            path: /media/deadpool/books
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: readarr-config
