bases/managers/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  selector:
    app: readarr
  ports:
    - name: tcp
      port: 8787
